--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-title : Wall-E - Jekyll
-description: 'A Modern Jekyll Theme'
+title : 쭈구리의 성장일지
+description: 쭈구리의 성장일지
 
 markdown: kramdown
 highlighter: rouge
 logo: false
 paginate: 15
 baseurl: /
-plugins: [jekyll-gist]
+plugins: [jekyll-gist, jekyll-paginate]
 permalink: /:year/:month/:title.html
